it will add navbar to the base.html file

--- a/Ig/templates/all-instagram/base.html
+++ b/Ig/templates/all-instagram/base.html
@@ -20,8 +20,11 @@
 
 </head>
 <body>
-    {% block content %}
-
-    {% endblock %}
+    <div class="container-fluid p-0 m-0">
+        {%include "instagram/navbar.html"%} {%block content%} {%endblock content%}
+      </div>
+      {%include "instagram/scripts.html"%} {% block scripts %}
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      {% bootstrap_javascript %} {% endblock %}
 </body>
 </html>
