--- a/Ig/templates/all-instagram/home.html
+++ b/Ig/templates/all-instagram/home.html
@@ -1,99 +1,78 @@
 {%extends 'all-instagram/base.html'%}
+    {% load bootstrap4 %}
+    {% load static %}
+    {% load crispy_forms_tags %}
+    {% block content %} 
+    {{ block.super}}
 
-{% block content %}
-
-<div class="container-fluid">
-    <div class="row main-container">
-      <div class="col-md-7 post-container mt-3">
-  
-        
-  
-        {% for post in posts %}
-  
-        <div class="card m-3">
-          <div class="card-header p-1">
-            <div class="image" href="{%url 'instagram:user_profile' username=user %}">
-              <img src="{{post.user.profile_picture.url}}" alt="" />
-            </div>
-            <div class="user_name ml-1 mb-2" >{{post.user.user.username}}</div>
-          </div>
-          {%if post.image%}
-          <a href="{%url 'instagram:view_post' post.id %}">
-            <img src="{{post.image.url}}" class="card-img-top" alt="post" />
-          </a>
-  
-          {%endif%}
-  
-          <div class="card-body">
-            <div class="icons-container">
-              <div class="like mr-3">
-                <a href="{%url 'instagram:like_post' post.id %}">
-                  <img src="../../static/images/liked.png" alt="" />
-                </a>
-              </div>
-              <div class="comment mr-3">
-                <a href="{%url 'instagram:view_post' post.id %}">
-                  <img src="../../static/images/message1.png" alt="" />
-                </a>
-              </div>
-              <div class="comment">
-                <a href="">
-                  <img src="../../static/images/share1.png" alt="" />
-                </a>
-              </div>
-            </div>
-            <h5>{{post.likes.count}} likes</h5>
-            <div class="card-text">
-              <span class="username"> {{post.user.user.username}} </span>
-              <span class="caption">{{post.caption}}</span>
-            </div>
-            <h5>
-              <a class="text-decoration-none" href="{%url 'instagram:view_post' post.id %}">
-                View all comments
-              </a>
-            </h5>
-            <span class="text-muted">{{post.created}}</span>
-          </div>
-          <div class="comments-form">
-            <form action="{%url 'instagram:add_comment' post.id %}" method="POST">
-              {%csrf_token%}
-              <div class="input-group">
-                <input type="text" class="form-control" name="comment" placeholder="Add comment" />
-                <button class="btn btn-outline-primary" type="submit">Post</button>
-              </div>
-            </form>
-          </div>
-        </div>
-  
-        {% endfor %}
-      </div>
-      <div class="col-md-5 followers-container">
-        <div class="followers-wrapper">
-          <div class="user-header">
-            <div class="image" href="{%url 'instagram:user_profile' username=user %}">
-              <img src="{{user.profile.profile_picture.url}}" alt="" />
-            </div>
-            <div class="user_name ml-1 mb-2">{{user.username}}</div>
-          </div>
-          <hr class="m-0" />
-          <p class="text-muted text-center mt-2 mb-2">Suggestions to follow</p>
-          <div class="users-wrapper">
-            {% for user in users %}
-  
-            <div class="single-user-container">
-              <a class="text-decoration-none user" href="{%url 'instagram:user_profile' username=user %}">
-                <div class="image">
-                  <img src="{{user.profile.profile_picture.url}}" alt="" />
+    <div class="container mt-4">
+        <div class="col-md-7">
+            <div class="row">
+                <div class="modal fade" id="post-upload" tabindex="-1" role="dialog"
+                    aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLongTitle">Upload a photo</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <form action="" method="post" enctype="multipart/form-data">
+                                    {% csrf_token %}
+                                    {{ post_form|crispy }}
+                                    <button class="btn btn-sm btn-info">Upload</button>
+                                    <button type="button" class="btn btn-sm btn-outline-danger" data-dismiss="modal">
+                                        Close
+                                    </button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="user_name mb-2">{{user.username}}</div>
-              </a>
             </div>
-            <hr />
-            {% endfor %}
-          </div>
         </div>
-      </div>
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-7">
+                <button class="btn btn-sm mb-4 ml-2 btn-outline-secondary" type="button"  data-toggle="modal" data-target="#post-upload" >
+                    <i class="fas fa-upload"></i> Upload a Photo
+                </button>
+            <div class="posts">
+                {%for post in posts %}
+                    <div class="card">
+                        <div class="card-header">
+
+                        </div>
+                        <div class="card-body">
+                           <img src=" {{post.image.url}}" alt="">
+                           {{post.caption}}
+                           <div class="card-footer"></div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+            </div>
+            
+            <div class="col-md-4 mt-5 fixed">
+                <a href="{%url 'profile' user.username%}" class="font-weight-bold txt">
+                    <img class="rounded-circle user" src="{{user.profile_picture.url}}" height="50" width="50">
+                    <span class="font-weight-bold ml-2"> {{user.username}}</span>
+                </a>
+                <p class="text-muted font-weight-bold mt-4"> Suggestions For You</p>
+                {% for person in all_users %}
+                <div class="container mb-2">
+                        <div class="">
+                            <img class="rounded-circle user" src="{{ person.profile_picture.url }}" height="30" width="30" alt="text">
+                            <span class="font-weight-bold ml-2"><a href="{% url 'user_profile' person.username  %}" class="txt">{{person.username}}</a></span>
+                            
+                        </div>
+                </div>
+
+                {% endfor %}
+            </div>
+        </div>
     </div>
-  </div>
-  
-  {% endblock%}
+    
+    {%endblock%}
