--- a/Ig/templates/all-instagram/post.html
+++ b/Ig/templates/all-instagram/post.html
@@ -1,76 +1,59 @@
 {%extends 'all-instagram/base.html'%}
-
+{% load bootstrap3 %}
+{% load static %}
+{% load crispy_forms_tags %}
 {% block content %}
-<div class="container">
-    <div class="single_post-container row">
-      <div class="col-md-6 image-container">
-        <img src="{{post.image.url}}" alt="" />
-      </div>
-      <div class="col-md-6 comments-container">
-        <div class="user">
-          <div class="image">
-            <img src="{{post.user.profile_picture.url}}" alt="" />
-          </div>
-          <div class="user_name ml-1 mb-2">{{post.user.user.username}}</div>
-        </div>
-        <hr />
-        <div class="post">
-          <span class="user_name"> {{post.user.user.username}} </span>
-          {{post.name}}
-          <p class="post_caption">{{post.caption}}</p>
-        </div>
-        <div class="comments-wrapper">
-          <h4 class="text-center">Comments</h4>
-          {% for comment in comments %}
-          <div class="comment_wrapper">
-            <div class="comment_user user_name mr-2">
-              <div class="user">
-                <div class="image">
-                  <img src="{{comment.user.profile.profile_picture.url}}" alt="" />
+{{ block.super}}
+
+<div class="container mt-4">
+    <div class="row">
+        <div class="col-md-6 ">
+            <div class="card mb-4">
+                <a class="card-header font-weight-bold text-dark" href="{% url 'user_profile' post.user.username  %}">  <img src="{{post.user.profile.profile_pic.url}}" class="rounded-circle border ml-3 mr-3"
+                    alt="" width="35" height="35">{{post.user.username}} </a> 
+                    <img class="card-img-top mt-1" src="{{post.image.url}}" alt=" " height="350">
+                <div class="card-body">
+                <span>
+                    <a class="ml-1" href="{%url 'like' post.id%}"><span
+                            style="font-size: 1.3em;"><i class="far fa-heart text-dark"></i></span>
+                    </a>
+                </span>
+                <span>
+                    <a class="ml-3" href=" "><span
+                            style="font-size: 1.3em;"><i class="far fa-comment text-dark"></i></span>
+                    </a>
+                </span><br>
+                <span class="ml-1 view" style="font-weight: bolder;" >{{post.likes}} likes</span><br>
+                <span class="ml-1"><span class="font-weight-bold">{{post.user}}</span> {{post.caption}}</span><br>
+                <p class="ml-1 text-muted view">{{post.comments.count}} comments</p>
+                <small class="ml-1 text-muted mt-1">{{post.upload_date|timesince|upper}} AGO </small>
                 </div>
-                <div class="user_name ml-1 mb-2">{{comment.user.username}}</div>
-              </div>
+
             </div>
-            <div class="comment-comment mt-3">
-              <p>...{{comment.comment.capitalize}}</p>
+
+        </div>
+        <div class="col-md-3">
+            <div class="">
+            <hr>
+
+                {% for comment in comments %}
+                {% if comment.image_id == post.id%}
+                 <strong>{{ comment.user }} </strong> <span class="view">{{ comment.comment }}</span><br>
+                        <small class="text-muted">{{comment.comment_date|timesince}}</small> 
+                <hr>
+                {% endif %}
+                {% endfor %}
+                
             </div>
-          </div>
-          <hr class="m-1 p-0" />
-          {%empty%}
-          <h5>No comments</h5>
-          {% endfor %}
+            <form class="" action="{%url 'comment' post.id%}" method="post" id="commform" enctype="multipart/form-data">
+                {{form.media}}
+                {%csrf_token%}
+                 {{form|crispy}}
+                <button class="btn btn-info btn-sm">Post</button>
+            </form>
         </div>
-  
-        <div class="icons-container mt-2">
-          <div class="like mr-3">
-            <a href="{% url 'instagram:like_post' post_id=post.id %}">
-              <img src="../../static/images/liked.png" alt="" />
-            </a>
-          </div>
-          <div class="comment mr-3">
-            <a href="#">
-              <img src="../../static/images/message1.png" alt="" />
-            </a>
-          </div>
-          <div class="comment">
-            <a href="">
-              <img src="../../static/images/share1.png" alt="" />
-            </a>
-          </div>
-        </div>
-        <h5>{{post.likes.count}} likes</h5>
-        <span class="text-muted">{{post.created}}</span>
-        <div class="comments-form mt-2">
-          <form action="{%url 'instagram:add_comment' post.id %}" method="POST">
-            {%csrf_token%}
-            <div class="input-group mb-3">
-              <input type="text" class="form-control" name="comment" placeholder="Add comment" />
-              <button class="btn btn-success" type="submit">Post</button>
-            </div>
-          </form>
-        </div>
-      </div>
+        <div class="col-md-1"></div>
     </div>
-  </div>
-  
-  {% endblock%}
+</div>
+
+{%endblock%}
