--- a/Ig/templates/all-instagram/user_profile.html
+++ b/Ig/templates/all-instagram/user_profile.html
@@ -1,58 +1,59 @@
 {%extends 'all-instagram/base.html'%}
+{% load bootstrap4 %}
+{% load static %}
+{% load crispy_forms_tags %}
 {% block content %}
+{{ block.super}}
 
-<div class="container-fluid m-5">
-    <div class="user_profile">
-      <div class="image">
-        {% if profile.profile_picture %}
-        <img class="profile-picture mt-3" src="{{profile.profile_picture.url}}" alt="" />
-        {% endif %}
-      </div>
-      <div class="details">
-        <div class="first">
-          <h3>{{user_select.username}}</h3>
-          {% if follow_status %}
-          <div>
-            <a href="{%url 'instagram:unfollow' user_select.id %}" class="btn btn-primary">Following</a>
-          </div>
-          {%else%}
-          <div>
-            <a href="{%url 'instagram:follow' user_select.id %}" class="btn btn-outline-primary">Follow</a>
-          </div>
-          {% endif %}
+div class="container mt-3">
+        <div class="content-section">
+            <div class="media">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-1"></div>
+                        <div class="col-md-3">
+                            <img class="rounded-circle" src="{{ user.profile_picture.url }}" height="150px" width="150px">
+                        </div>
+                        <div class="col-md-6 mt-3">
+                            <div class="media-body">
+                                <div class=""><span class="font-weight-bold name">{{ user.username }}</span>
+                                    <a class="btn btn-sm btn-outline-secondary ml-3 mr-3" data-toggle="modal" data-target=".bd-example-modal-md"><strong>Edit Profile</strong></a>
+                                </div>
+    
+                                <div class="post-details mt-3 mb-3">
+                                    <span class="mr-5"><strong>{{images.count}}</strong> Posts</span>
+                                    <span class="mr-5"> <strong>{{ user.profile.followers.count }}</strong> followers</span>
+                                    <span class="mr-5"> <strong>{{ user.profile.following.count }}</strong> following</span>
+                                </div>
+                                <h5>{{ user.profile.name }}</h5>
+                                <p class="text-secondary">{{ user.profile.bio }}</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal fade bd-example-modal-md" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-md ">
+                    <div class="modal-content">
+                        <form action="" method="post" enctype="multipart/form-data" class="mr-4 mt-4 ml-4 mb-4">
+                            {% csrf_token%}
+                            {{ user_form|crispy}}
+                            {{ profile_form|crispy}}
+                            <button type="submit" class="btn btn-info btn-sm login"> Update Profile</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="second">
-          <h5>Bio</h5>
-          <p class="">{{profile.bio}}</p>
+        <hr class="mt-4">
+            <div class="row">
+            {% for image in images %}                
+                <div class="col-sm-8 col-lg-3 mb-3 imgdisplay">
+                    <img src="{{image.image.url}}" alt=" " class="card-img photo" height="200">
+                    
+                </div>            
+            {% endfor %}
         </div>
-        <div class="third">
-          <div class="posts ml-3"><span>{{posts.count}}</span> posts</div>
-          <div class="followers ml-3">
-            <span>{{user_select.followers.count}}</span> followers
-          </div>
-          <div class="following ml-3">
-            <span>{{user_select.following.count}}</span> following
-          </div>
-        </div>
-      </div>
     </div>
-    <hr />
-    <div class="user-posts">
-      <div class="row">
-        {% for post in posts %}
-        <div class="col-md-4">
-          <div class="post-wrapper">
-            <a href="{%url 'instagram:view_post' post.id %}">
-              <img class="img-responsive" src="{{post.image.url}}" alt="..." />
-            </a>
-          </div>
-        </div>
-  
-        {%empty%}
-  
-        <h4 class="text-center">No posts yet</h4>
-        {% endfor %}
-      </div>
-    </div>
-  </div>
-{% endblock %}  
+
+{%endblock%}
