it will add comments

--- a/Ig/templates/navbar.html
+++ b/Ig/templates/navbar.html
@@ -31,16 +31,9 @@
             <span style="font-size: 1.6em;  color:black " class="navbar-icons" ><i class="fas fa-plus navbar-icons" id="add"></i></span>
             </a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <img src="{{user.profile_picture.url}}"  alt= "" class="rounded-circle user">
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a href="{%url 'profile' user.username%}" class="nav-link text-dark dropdown-item"><i class="fas fa-user"></i> Profile</a>
-            <!-- <a href="/accounts/password/change" class="nav-link text-dark dropdown-item"><i class="fas fa-cog"></i> Settings</a> -->
-            <a href="/logout" class="nav-link text-dark dropdown-item">Logout</a>
-            
-          </div>
+        <li> <a href="/logout" class="nav-link text-dark btn-primary">Logout</a>
         </li>
+         
         {% else %}
         <li class="nav-item active "><a class="nav-link mt-1 mb-1" href="{%url 'login'%}">Log in</a></li>
         <li class="nav-item active "><a class="nav-link mt-1 mb-1" href="{%url 'register'%}">Sign up</a></li>
