--- a/Ig/templates/all-instagram/home.html
+++ b/Ig/templates/all-instagram/home.html
@@ -14,7 +14,7 @@
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h5 class="modal-title" id="exampleModalLongTitle">Upload a photo</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <button type="button" class="close" data-dismiss="modal" data-target="#imageUpload" aria-label="Close">
                                     <span aria-hidden="true">&times;</span>
                                 </button>
                             </div>
@@ -34,37 +34,41 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-1"></div>
             <div class="col-md-7">
-                <button class="btn btn-sm mb-4 ml-2 btn-outline-secondary" type="button"  data-toggle="modal" data-target="#post-upload" >
-                    <i class="fas fa-upload"></i> Upload a Photo
-                </button>
-            <div class="posts">
-                {%for post in posts %}
-                    <div class="card">
-                        <div class="card-header">
-
-                        </div>
-                        <div class="card-body">
-                           <img src=" {{post.image.url}}" alt="">
-                           {{post.caption}}
-                           <div class="card-footer"></div>
-                        </div>
-                    </div>
-                {% endfor %}
+            {%for post in posts%}
+            <div class="card mb-4">
+                <a class="card-header font-weight-bold text-dark" href="{% url 'user_profile' post.user.username  %}">  <img src="{{post.user.profile.profile_pic.url}}"  alt= "" class="rounded-circle user">  {{post.user.username}} </a>  
+                <a href="{% url 'comment' post.id %}"><img class="card-img-top" src="{{post.image.url}}" alt=" "></a>
+                <div class="card-body">
+                <span>
+                    <a class="ml-1" href="{%url 'like' post.id%}"><span
+                            style="font-size: 1.3em;"><i class="far fa-heart text-dark"></i></span>
+                    </a>
+                </span>
+                <span>
+                    <a class="ml-3" href="{% url 'comment' post.id %}"><span
+                            style="font-size: 1.3em;"><i class="far fa-comment text-dark"></i></span>
+                    </a>
+                </span><br>
+                <span class="ml-1 view" style="font-weight: bolder;" >{{post.likes}} likes</span><br>
+                <span class="ml-1"><span class="font-weight-bold">{{post.user}}</span> {{post.caption}}</span><br>
+                <a  href="{% url 'comment' post.id %}" class="ml-1 text-muted view">View all {{post.comments.count}} comments</a><br><br>
+                <small class="ml-1 text-muted mt-2">{{post.upload_date|timesince|upper}} AGO </small>
+                </div>
             </div>
+            {%endfor%}
             </div>
-            
+            <!-- <div class="col-md-1"></div> -->
             <div class="col-md-4 mt-5 fixed">
                 <a href="{%url 'profile' user.username%}" class="font-weight-bold txt">
-                    <img class="rounded-circle user" src="{{user.profile_picture.url}}" height="50" width="50">
+                    <img class="rounded-circle user" src="{{user.profile.profile_picture.url}}" height="50" width="50">
                     <span class="font-weight-bold ml-2"> {{user.username}}</span>
                 </a>
                 <p class="text-muted font-weight-bold mt-4"> Suggestions For You</p>
                 {% for person in all_users %}
                 <div class="container mb-2">
                         <div class="">
-                            <img class="rounded-circle user" src="{{ person.profile_picture.url }}" height="30" width="30" alt="text">
+                            <img class="rounded-circle user" src="{{ person.profile.profile_picture.url }}" height="30" width="30">
                             <span class="font-weight-bold ml-2"><a href="{% url 'user_profile' person.username  %}" class="txt">{{person.username}}</a></span>
                             
                         </div>
@@ -74,5 +78,4 @@
             </div>
         </div>
     </div>
-    
     {%endblock%}
