--- a/Ig/templates/all-instagram/profile.html
+++ b/Ig/templates/all-instagram/profile.html
@@ -2,18 +2,17 @@
 {% load bootstrap4 %}
 {% load static %}
 {% load crispy_forms_tags %}
-{% block content %}
+{% block content %} 
 {{ block.super}}
 
-
-<div class="container mt-3">
+    <div class="container mt-3">
         <div class="content-section">
             <div class="media">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-1"></div>
                         <div class="col-md-3">
-                            <img class="rounded-circle" src="{{ user.profile_picture.url }}" height="150px" width="150px">
+                            <img class="rounded-circle" src="{{ user.profile.profile_picture.url }}" height="150px" width="150px">
                         </div>
                         <div class="col-md-6 mt-3">
                             <div class="media-body">
@@ -48,7 +47,7 @@
         </div>
         <hr class="mt-4">
             <div class="row">
-            {% for image in image %}                
+            {% for image in images %}                
                 <div class="col-sm-8 col-lg-3 mb-3 imgdisplay">
                     <img src="{{image.image.url}}" alt=" " class="card-img photo" height="200">
                     
