--- a/Ig/templates/registration/login.html
+++ b/Ig/templates/registration/login.html
@@ -5,14 +5,7 @@
 {% block content %}
 <div class="container mt-5">
   <div class="row">
-      <div class="col-md-2"></div>
-      <div class="col-md-4 slide-holder">
-        <div class="slider">               
-        </div>
-          <img src="{% static 'images/instagram.jpg' %}"  alt=""  width="100%" height="100%" id="logo1">
-      </div>
-      
-      <div class="col-md-4 col-sm-8 mt-4">
+      <div class="col-md-4 mt-4">
           <div class="card pb-1">
               <div class="card-title mt-4">
                   <img src="{% static 'images/Instagram_logo.png' %}" alt="" width="40%" class="logo">
